tests/bad/func_ret_from_void.ae
/// fail: Cannot return from void function

def foo() {
    return 5
}
